--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -44,19 +44,19 @@ body {
 
 #logout {
   margin-top: 280px;
-  background-color: white;
+  background-color: rgb(241, 76, 16);
   height: 35px;
-  width: 80px;
-  border: rgb(241, 76, 16) 1px solid;
+  width: 100px;
+  border: rgb(255, 255, 255) 1px solid;
   border-radius: 10px;
-  color: rgb(241, 76, 16);
+  color:white;
   font-weight: 500;
   cursor: pointer;
   margin-left: 10px;
 }
 
 #logout:hover {
-  background-color: rgb(241, 76, 16);
-  color: white;
-  border: 1px solid white;
+  background-color: rgb(248, 248, 248);
+  color: rgb(241, 76, 16);
+  border: 1px solid rgb(241, 76, 16);
 }
