--- a/frontend/src/pages/profile.css
+++ b/frontend/src/pages/profile.css
@@ -10,7 +10,7 @@ body {
   margin-left: 125px;
   width: 120%;
   margin-top: -20px;
-  border: 1px solid rgb(248, 184, 160);
+  border: 1px solid rgb(235, 126, 86);
 }
 .card .card-header {
   font-weight: 500;
@@ -23,6 +23,7 @@ body {
   margin-bottom: 0;
   background-color: rgba(33, 40, 50, 0.03);
   border-bottom: 1px solid rgba(33, 40, 50, 0.125);
+  color: rgb(245, 102, 35);
 }
 .form-control,
 .dataTable-input {
@@ -32,7 +33,7 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1;
-  color: #69707a;
+  color: #121213;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #c5ccd6;
@@ -41,7 +42,8 @@ body {
   appearance: none;
   border-radius: 0.35rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  border: 1px solid rgb(247, 98, 45);
+  border: 1px solid rgb(177, 177, 177);
+
 }
 
 .btn-primary {
